Fix Bug #9517  Condition pushdown to storage engine does not work for update/delete